@@ -1,6 +1,6 @@
 <?xml version = '1.0'?>
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui version="33" name="tellico">
+<kpartgui version="34" name="tellico">
  <MenuBar>
   <Menu name="file">
    <text>&amp;File</text>
@@ -41,6 +41,8 @@
     <Separator/>
     <Action name="file_import_amc"/>
     <Action name="file_import_griffith"/>
+    <Separator/>
+    <Action name="file_import_boardgamegeek"/>
     <Separator/>
     <Action name="file_import_vinoxml"/>
     <Separator/>
