@@ -1,3 +1,7 @@
+2014-12-06  Robby Stephenson  <robby@periapsis.org>
+
+	* Added importer for BoardGameGeek collections.
+
 2014-12-05  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed bug with importing Goodreads collection.
